# varaaha

./: .gitignore  package-lock.json
backend/: .env.example  .gitignore  package.json  tsconfig.json
backend-python/: .env.example  README.md  pyproject.toml
backend-python/app/: main.py
backend-python/app/api/: deps.py
backend-python/app/api/routes/: __init__.py  auth.py  health.py  orders.py  payments.py
backend-python/app/api/routes/v1/: __init__.py
backend-python/app/core/: config.py  password.py  security.py
backend-python/app/db/: base.py  session.py
backend-python/app/models/: __init__.py  address.py  coupon.py  order.py  payment.py  product.py  user.py
backend-python/app/schemas/: address.py  auth.py  order.py  payment.py
backend-python/app/services/: auth.py  orders.py  payments.py  pricing.py  razorpay.py
backend-python/app/utils/: order_number.py
backend/database/: schema.sql  seed.sql
backend/src/: app.ts  server.ts
backend/src/config/: database.ts  env.ts
backend/src/constants/: auth.ts
backend/src/controllers/: address.controller.ts  auth.controller.ts  coupon.controller.ts  order.controller.ts  payment.controller.ts  product.controller.ts
backend/src/middleware/: authenticated.ts  error-handler.ts  not-found-handler.ts  require-role.ts  validate-request.ts
backend/src/routes/: address.routes.ts  auth.routes.ts  coupon.routes.ts  index.ts  order.routes.ts  payment.routes.ts  product.routes.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
(+34 files in other folders)
